// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseTotal correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 1 expense totaling $5.00
  </p>
</div>
`;

exports[`should render ExpenseTotal correctly with more than 1 expense 1`] = `
<div>
  <p>
    Viewing 2 expenses totaling $5.00
  </p>
</div>
`;
